# mbajk_prediction_system

./: .gitignore  Dockerfile  data.dvc  models.dvc  pyproject.toml
.dvc/: config
.github/workflows/: deploy_client.yml  deploy_service.yml  fetch-dvc.yml  fetch-dvc2.yml  fetch.yml  multi_job_fetch.yml  python-app.yml  run_data_test.yml  test_pred.yml  train.yml  validation_and_testing.yml
data/: processed.dvc
data/processed/: 1.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  18.csv  19.csv  2.csv  20.csv  21.csv  22.csv  23.csv  24.csv  25.csv  26.csv  27.csv  28.csv  29.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv  DVORANA_TABOR.csv  EUROPARK_-_POBREŠKA_C..csv  GORKEGA_UL._-_OŠ_FRANCETA_PREŠERNA.csv  GOSPOSVETSKA_C._-_III._GIMNAZIJA.csv  GOSPOSVETSKA_C._-_TURNERJEVA_UL..csv  GOSPOSVETSKA_C._-_VRBANSKA_C..csv  JHMB_–_DVOETAŽNI_MOST.csv  KOROŠKA_C._-_KOROŠKI_VETER.csv  LIDL_-_KOROŠKA_C..csv  LIDL_-_TITOVA_C..csv  LJUBLJANSKA_UL._-_FOCHEVA.csv  (+19 more)
data/raw/: fetched_data.json  fetched_data_20240313_231035.json
gx/: great_expectations.yml  run_mbajk_checkpoint.py  run_mbajk_first_checkpoint.py  run_test_checkpoint.py  text.ipynb
gx/checkpoints/: mbajk_checkpoint.yml  test_checkpoint.yml
gx/expectations/: .ge_store_backend_id  mbajk_expecation_suite.json  mbajk_expectation_suite.json  test_suite.json
mlruns/0/: meta.yaml
models/: uni_gru_model.h5  uni_gru_model_20240319_135049.h5  uni_gru_scaler.pkl  uni_gru_scaler20240319_135049.pkl
models/1/: multi_gru_bk_scaler.pkl  multi_gru_fo_scaler.pkl  multi_gru_model.h5
models/10/: multi_gru_bk_scaler.pkl  multi_gru_fo_scaler.pkl  multi_gru_model.h5
models/11/: multi_gru_bk_scaler.pkl  multi_gru_model.h5
models/12/: multi_gru_bk_scaler.pkl  multi_gru_fo_scaler.pkl  multi_gru_model.h5
models/13/: multi_gru_bk_scaler.pkl  multi_gru_fo_scaler.pkl  multi_gru_model.h5
models/14/: multi_gru_bk_scaler.pkl  multi_gru_fo_scaler.pkl  multi_gru_model.h5
models/15/: multi_gru_bk_scaler.pkl  multi_gru_fo_scaler.pkl  multi_gru_model.h5
models/16/: multi_gru_bk_scaler.pkl  multi_gru_model.h5
notebooks/: evidently.ipynb  gx.ipynb  train_model.ipynb
reports/: stability_tests.html  test_metrics.txt  train_metrics.txt
src/: settings.py
tests/: test_api.py  test_input.json  test_mbajk_api.py  test_weather_api.py
(+1531 files in other folders)
